force-app/main/default/objects/Parent01__c/Parent01__c.object-meta.xml
<CustomObject>
    <label>Parent01</label>
    <nameField>
        <label>Parents Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>parents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>