force-app/main/default/objects/Parent01__c/fields/aadhar_number1__c.field-meta.xml
<CustomField>
    <fullName>aadhar_number1__c</fullName>
    <label>aadhar number1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>