force-app/main/default/objects/Parent01__c/fields/job_sector__c.field-meta.xml
<CustomField>
    <fullName>job_sector__c</fullName>
    <label>job_sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Goverment</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>un employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>