force-app/main/default/objects/Parent01__c/fields/parent_ship__c.field-meta.xml
<CustomField>
    <fullName>parent_ship__c</fullName>
    <label>parent ship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>father</fullName>
            </value>
            <value>
                <fullName>mother</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>